--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ body
   <br>
 <div class="container">
     <img src="travel.jpg" alt="travel">
-    <a  href="https://www.youtube.com/channel/UCTeLLTFZtmtGr0KCpVJLNlA"><button class="button" ><span>View Destinations</a></span></h1>
+    <a  href="page_1.html"><button class="button" ><span>View Destinations</a></span></h1>
 </div>
 </body>
 </html>
